--- a/1990s.html
+++ b/1990s.html
@@ -45,9 +45,6 @@
                     <a class="nav-link" href="today.html">Today</a>
                 </li>
                 <li><hr class="dropdown-divider text-light"></li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./team.html">Meet the Team</a>
-                </li>
             </ul>
             
         </div>
@@ -60,11 +57,16 @@
     </div>
 
     <main>
-        <img class="center" src="https://th.bing.com/th/id/OIP.c36REDoh4vOgU1fMGldGlwHaE8?pid=ImgDet&rs=1">
-        <p class="p">The smartphone market has always been an oligopoly, as phone production was so difficult. Motorolla and AT&T had extreme control over the market 
-            but as time passed their technology became heavily outdated and was overwhelmed by Apple and Samsung. The latter companies owning 14% and 20% mmarket share respectively.</p>
+        <main class="container">
+            <div class="row">
+                <div class="col-md-6 bg-danger"><img class="center" src="https://th.bing.com/th/id/OIP.c36REDoh4vOgU1fMGldGlwHaE8?pid=ImgDet&rs=1"></div>
+                <div class="col-md-6 bg-primary"><p class="p">The smartphone market has always been an oligopoly, as phone production was so difficult. Motorolla and AT&T had extreme control over the market 
+            but as time passed their technology became heavily outdated and was overwhelmed by Apple and Samsung. The latter companies owning 14% and 20% mmarket share respectively.</p></div>
+            </div>
+        </main>
     </main>
     <footer>
+        <br>
         <a href="https://en.wikipedia.org/wiki/IPhone">Wikipedia 2023</a> about iPhones
         <p>Navigation</p>
         <table class="center">
