--- a/1991.html
+++ b/1991.html
@@ -45,9 +45,6 @@
                     <a class="nav-link" href="today.html">Today</a>
                 </li>
                 <li><hr class="dropdown-divider text-light"></li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./team.html">Meet the Team</a>
-                </li>
             </ul>
             
         </div>
@@ -60,10 +57,17 @@
     </div>
 
     <main>
-        <img class="center" src="https://1.bp.blogspot.com/-2Jk09DFZ2Ms/WABpXjU6-XI/AAAAAAAAAIg/m2NdE2LZOdQwZQe6mrvjNq1fU_8X3i34ACLcB/s1600/Mobile-Evolution-1G-2G-3G-4G.png">
-        <P class="p">2G is the second generation of cellular networks, based on the Global System for Mobile Communication (GSM). It was designed to accommodate the growing number of mobile phones, 2G introduced cellular services like SMS, multimedia messaging, and digitally encrypted voice conversations. It made more efficient use of the radio frequency (RF) spectrum, so more devices could share the same frequency bands.</P>
+        <main class="container">
+            <div class="row">
+                <div class="col-md-6 bg-danger"><img class="center" src="https://1.bp.blogspot.com/-2Jk09DFZ2Ms/WABpXjU6-XI/AAAAAAAAAIg/m2NdE2LZOdQwZQe6mrvjNq1fU_8X3i34ACLcB/s1600/Mobile-Evolution-1G-2G-3G-4G.png">
+</div>
+                <div class="col-md-6 bg-primary"><P class="p">2G is the second generation of cellular networks, based on the Global System for Mobile Communication (GSM). It was designed to accommodate the growing number of mobile phones, 2G introduced cellular services like SMS, multimedia messaging, and digitally encrypted voice conversations. It made more efficient use of the radio frequency (RF) spectrum, so more devices could share the same frequency bands.</P>
+</div>
+            </div>
+        </main>
     </main>
     <footer>
+        <br>
         <a href="https://en.wikipedia.org/wiki/IPhone">Wikipedia 2023</a> about iPhones
         <p>Navigation</p>
             <table class="center">
