--- a/2000s.html
+++ b/2000s.html
@@ -45,9 +45,6 @@
                     <a class="nav-link" href="today.html">Today</a>
                 </li>
                 <li><hr class="dropdown-divider text-light"></li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./team.html">Meet the Team</a>
-                </li>
             </ul>
             
         </div>
@@ -60,10 +57,15 @@
     </div>
 
     <main>
-            <img class="center" src="https://th.bing.com/th/id/OIP.2emtO-BvyJ0UlxyPyAt04AHaJk?pid=ImgDet&rs=1">
-        <p class="p">The first iPhone was unveiled by Steve Jobs in January 2007, as a revolutionary device that combined an iPod, a phone and an Internet communicator. The first iPhone was praised for its design, user interface, web browsing and media capabilities, but also criticized for its lack of 3G, GPS, MMS, copy and paste, and third-party apps. However, the critisms didn't stop the explosion of the product and would usher in a new age of device usage.</p>
+        <main class="container">
+    <div class="row">
+        <div class="col-md-6 bg-danger">            <img class="center" src="https://th.bing.com/th/id/OIP.2emtO-BvyJ0UlxyPyAt04AHaJk?pid=ImgDet&rs=1"></div>
+        <div class="col-md-6 bg-primary"><p class="p">The first iPhone was unveiled by Steve Jobs in January 2007, as a revolutionary device that combined an iPod, a phone and an Internet communicator. The first iPhone was praised for its design, user interface, web browsing and media capabilities, but also criticized for its lack of 3G, GPS, MMS, copy and paste, and third-party apps. However, the critisms didn't stop the explosion of the product and would usher in a new age of device usage.</p></div>
+    </div>
+</main>
     </main>
     <footer>
+        <br>
         <a href="https://en.wikipedia.org/wiki/IPhone">Wikipedia 2023</a> about iPhones
         <p>Navigation</p>
         <table class="center">
@@ -85,3 +87,4 @@
     </footer>
 </body>
 </html>
+
