--- a/today.html
+++ b/today.html
@@ -45,9 +45,6 @@
                     <a class="nav-link" href="today.html">Today</a>
                 </li>
                 <li><hr class="dropdown-divider text-light"></li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./team.html">Meet the Team</a>
-                </li>
             </ul>
             
         </div>
@@ -59,11 +56,15 @@
         <p>Modern Phones Today</p>
     </div>
 
-    <main>
-            <img class="center" src="https://th.bing.com/th/id/OIP.ZGXyADC_6l78D70SQOQ-EgHaEK?pid=ImgDet&rs=1">
-        <p class="p">Modern iPhones today have technology more advanced than the machines used to launch humanity to the moon. There is always a variety of new phone models that come out monthly for consumers worldwide. It is a feat of modern technology that we can tap a screen and access immediate news and talk to with people accross the world.</p>
-    </main>
+        <main class="container">
+            <div class="row">
+                <div class="col-md-6 bg-danger"><img class="center" src="https://th.bing.com/th/id/OIP.ZGXyADC_6l78D70SQOQ-EgHaEK?pid=ImgDet&rs=1"></div>
+                <div class="col-md-6 bg-primary"><p class="p">Modern iPhones today have technology more advanced than the machines used to launch humanity to the moon. There is always a variety of new phone models that come out monthly for consumers worldwide. It is a feat of modern technology that we can tap a screen and access immediate news and talk to with people accross the world.</p></div>
+            </div>
+        </main>
+            
     <footer>
+        <br>
         <a href="https://en.wikipedia.org/wiki/IPhone">Wikipedia</a> 2023
         <p>Navigation
         <table class="center">
