--- a/1942.html
+++ b/1942.html
@@ -45,9 +45,6 @@
                     <a class="nav-link" href="today.html">Today</a>
                 </li>
                 <li><hr class="dropdown-divider text-light"></li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./team.html">Meet the Team</a>
-                </li>
             </ul>
             
         </div>
@@ -59,14 +56,15 @@
         <p>First DynaTAC 800x Handheld Phone</p>
     </div>
 
-        <main>
-                <img class="center" src="https://th.bing.com/th/id/OIP.FgZOzZDD9KcmpddujA3bvwHaIB?pid=ImgDet&rs=1">
-            <p class="p">The handheld phone was a device designed reduce noise pollution and increase privacy. The device was frequently described in its commercial advertisements as "a voice silencer designed for confidential conversation, clear transmission and office quiet. It was heavily praised for its convience yet the bulkiness of the product was the cause of unsatisfaction for many consumers.
-            </p>
-        </main>
-
+    <main class="container">
+        <div class="row">
+            <div class="col-md-6 bg-danger"><img class="center" src="https://th.bing.com/th/id/OIP.FgZOzZDD9KcmpddujA3bvwHaIB?pid=ImgDet&rs=1"></div>
+            <div class="col-md-6 bg-primary"><p class="p">The handheld phone was a device designed reduce noise pollution and increase privacy. The device was frequently described in its commercial advertisements as "a voice silencer designed for confidential conversation, clear transmission and office quiet. It was heavily praised for its convience yet the bulkiness of the product was the cause of unsatisfaction for many consumers.</p></div>
+        </div>
+    </main>
+    
         <footer>
-
+            <br>
             <a id="center" href="https://en.wikipedia.org/wiki/IPhone">Wikipedia</a> 2023
 
             <p>Navigation</p>
