--- a/1942.html
+++ b/1942.html
@@ -59,7 +59,9 @@
     <main class="container">
         <div class="row">
             <div class="col-md-6 bg-danger"><img class="center" src="https://th.bing.com/th/id/OIP.FgZOzZDD9KcmpddujA3bvwHaIB?pid=ImgDet&rs=1"></div>
-            <div class="col-md-6 bg-primary"><p class="p">The handheld phone was a device designed reduce noise pollution and increase privacy. The device was frequently described in its commercial advertisements as "a voice silencer designed for confidential conversation, clear transmission and office quiet. It was heavily praised for its convience yet the bulkiness of the product was the cause of unsatisfaction for many consumers.</p></div>
+            <div class="col-md-6 bg-primary"><p class="p">The first handheld phone, commonly known as the "brick phone," marked a revolutionary milestone in the history of telecommunications. Introduced by Motorola in 1973, the Motorola DynaTAC 8000x was the inaugural commercially available portable cellular phone. Weighing nearly 2.2 pounds and measuring around 10 inches in height, the device earned its colloquial nickname due to its substantial size and shape.
+                The DynaTAC 8000x operated on the analog Advanced Mobile Phone System (AMPS) and featured a retractable antenna. Although its design was bulky compared to contemporary smartphones, it represented a groundbreaking departure from traditional landline communication, providing users with the unprecedented freedom to make calls on the go. However, accessibility came at a hefty cost, with the DynaTAC initially priced at $3,995 – equivalent to around $9,000 when adjusted for inflation.
+                Despite its limitations, the DynaTAC 8000x laid the groundwork for subsequent advancements in mobile technology. Its release symbolized a shift towards the portable and personal nature of communication devices, foreshadowing the evolution of smaller, more sophisticated mobile phones in the years to come. The pioneering handheld phone set the stage for the pervasive use of mobile devices in today's interconnected world, shaping the trajectory of communication and technology.</p></div>
         </div>
     </main>
     
