--- a/1990s.html
+++ b/1990s.html
@@ -60,8 +60,11 @@
         <main class="container">
             <div class="row">
                 <div class="col-md-6 bg-danger"><img class="center" src="https://th.bing.com/th/id/OIP.c36REDoh4vOgU1fMGldGlwHaE8?pid=ImgDet&rs=1"></div>
-                <div class="col-md-6 bg-primary"><p class="p">The smartphone market has always been an oligopoly, as phone production was so difficult. Motorolla and AT&T had extreme control over the market 
-            but as time passed their technology became heavily outdated and was overwhelmed by Apple and Samsung. The latter companies owning 14% and 20% mmarket share respectively.</p></div>
+                <div class="col-md-6 bg-primary"><p class="p">The smartphone industry is characterized by an oligopoly, a market structure dominated by a small number of large companies. As of my last knowledge update in January 2022, the global smartphone market is primarily led by a handful of major players, including Apple, Samsung, and a few Chinese manufacturers such as Huawei, Xiaomi, and Oppo.
+                    Apple and Samsung, in particular, have established a duopoly, exerting considerable influence over the market. These companies have significant control over pricing, innovation, and the overall direction of the industry. Their dominance is fortified by brand loyalty, extensive marketing, and proprietary ecosystems that tie users to their respective platforms.
+                    The barriers to entry in the smartphone industry are high, given the substantial investment required for research, development, and marketing. This creates a challenging environment for new entrants to gain a significant foothold. Additionally, the intricate supply chains, global distribution networks, and intellectual property protections further consolidate the power of established players.
+                    The smartphone oligopoly has both advantages and disadvantages for consumers. On the positive side, competition among these major players often leads to rapid technological advancements, innovative features, and improved product quality. However, it can also limit choices for consumers and potentially result in higher prices due to reduced competition.
+                    Regulatory bodies globally keep a close eye on this oligopolistic market to ensure fair competition and protect consumer interests. As the smartphone industry continues to evolve, the dynamics of this oligopoly may shift with emerging players or changes in market conditions.</p></div>
             </div>
         </main>
     </main>
