--- a/1991.html
+++ b/1991.html
@@ -61,7 +61,11 @@
             <div class="row">
                 <div class="col-md-6 bg-danger"><img class="center" src="https://1.bp.blogspot.com/-2Jk09DFZ2Ms/WABpXjU6-XI/AAAAAAAAAIg/m2NdE2LZOdQwZQe6mrvjNq1fU_8X3i34ACLcB/s1600/Mobile-Evolution-1G-2G-3G-4G.png">
 </div>
-                <div class="col-md-6 bg-primary"><P class="p">2G is the second generation of cellular networks, based on the Global System for Mobile Communication (GSM). It was designed to accommodate the growing number of mobile phones, 2G introduced cellular services like SMS, multimedia messaging, and digitally encrypted voice conversations. It made more efficient use of the radio frequency (RF) spectrum, so more devices could share the same frequency bands.</P>
+                <div class="col-md-6 bg-primary"><P class="p">
+                    The origins of 2G (second-generation) cellular networking can be traced back to the 1980s when there was a growing demand for more efficient and versatile mobile communication systems. The first generation (1G) of cellular networks primarily focused on voice calls and had limited capacity. To address these limitations, the transition to 2G marked a significant advancement in mobile telecommunications.
+                    The Global System for Mobile Communications (GSM) emerged as a pivotal standard for 2G networks. Developed in the early 1980s by the European Telecommunications Standards Institute (ETSI), GSM introduced digital technology, enabling not only clearer voice quality but also the integration of data services. This shift from analog to digital communication paved the way for various innovations, including text messaging (SMS) and circuit-switched data services.
+                    One of the key features of 2G was the introduction of time-division multiple access (TDMA) and code-division multiple access (CDMA) technologies, which allowed multiple users to share the same frequency bands simultaneously. TDMA, used in GSM networks, divided the frequency into time slots, while CDMA utilized unique codes to differentiate signals. These technologies significantly increased the efficiency and capacity of cellular networks.
+                    The implementation of 2G networks marked a crucial step towards a more interconnected and data-centric mobile landscape. It laid the foundation for the subsequent generations, fostering the evolution of mobile communication beyond voice calls and fundamentally transforming the way people connect and communicate globally.</P>
 </div>
             </div>
         </main>
